@@ -2,21 +2,26 @@ package com.demo.admissionportal.service.impl;
 
 import com.demo.admissionportal.constants.ResponseCode;
 import com.demo.admissionportal.constants.SubjectStatus;
+import com.demo.admissionportal.dto.entity.ActionerDTO;
 import com.demo.admissionportal.dto.request.CreateSubjectGroupRequestDTO;
 import com.demo.admissionportal.dto.request.UpdateSubjectGroupRequestDTO;
-import com.demo.admissionportal.dto.response.CreateSubjectGroupResponseDTO;
-import com.demo.admissionportal.dto.response.CreateSubjectResponseDTO;
+import com.demo.admissionportal.dto.response.sub_entity.CreateSubjectGroupResponseDTO;
+import com.demo.admissionportal.dto.response.sub_entity.CreateSubjectResponseDTO;
 import com.demo.admissionportal.dto.response.ResponseData;
-import com.demo.admissionportal.dto.response.SubjectGroupResponseDTO;
-import com.demo.admissionportal.dto.response.sub_entity.SubjectResponseDTO;
+import com.demo.admissionportal.dto.response.sub_entity.SubjectGroupResponseDTO;
+import com.demo.admissionportal.dto.response.sub_entity.SubjectResponseDTO2;
+import com.demo.admissionportal.entity.StaffInfo;
 import com.demo.admissionportal.entity.Subject;
 import com.demo.admissionportal.entity.SubjectGroup;
 import com.demo.admissionportal.entity.User;
 import com.demo.admissionportal.entity.sub_entity.SubjectGroupSubject;
+import com.demo.admissionportal.repository.StaffInfoRepository;
 import com.demo.admissionportal.repository.SubjectGroupRepository;
 import com.demo.admissionportal.repository.SubjectRepository;
+import com.demo.admissionportal.repository.UserRepository;
 import com.demo.admissionportal.repository.sub_repository.SubjectGroupSubjectRepository;
 import com.demo.admissionportal.service.SubjectGroupService;
+import com.demo.admissionportal.util.impl.NameUtils;
 import jakarta.transaction.Transactional;
 import lombok.extern.slf4j.Slf4j;
 import org.modelmapper.ModelMapper;
@@ -31,7 +36,6 @@ import org.springframework.stereotype.Service;
 import java.util.*;
 import java.util.stream.Collectors;
 
-
 @Slf4j
 @Service
 public class SubjectGroupServiceImpl implements SubjectGroupService {
@@ -42,18 +46,20 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
     @Autowired
     private SubjectGroupSubjectRepository subjectGroupSubjectRepository;
     @Autowired
+    private UserRepository userRepository;
+    @Autowired
     private ModelMapper modelMapper;
+    @Autowired
+    private StaffInfoRepository staffInfoRepository;
 
     @Override
     @Transactional
     public ResponseData<?> createSubjectGroup(CreateSubjectGroupRequestDTO request) {
         SubjectGroup existSubjectGroup = subjectGroupRepository.findByName(request.getName());
-        // check subject_group already exists
         if (existSubjectGroup != null) {
             log.warn("Subject group with name {} already exists", request.getName());
             return new ResponseData<>(ResponseCode.C203.getCode(), "Tổ hợp môn học đã tồn tại !");
         }
-        // Check exist and active/inactive subjects
         List<Integer> subjectIds = request.getSubjectIds();
         if (subjectIds.size() < 3) {
             return new ResponseData<>(ResponseCode.C204.getCode(), "Phải có ít nhất 3 môn học để tạo thành tổ hợp !");
@@ -67,30 +73,29 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
                 return new ResponseData<>(ResponseCode.C203.getCode(), "Tổ hợp môn học có chứa môn học không được tìm thấy !");
             }
         }
-        //check exist three subjects that have been create a subject_group before
         List<SubjectGroup> allSubjectGroups = subjectGroupRepository.findAll();
         List<SubjectGroupResponseDTO> matchingSubjectGroups = new ArrayList<>();
         for (SubjectGroup group : allSubjectGroups) {
             List<Integer> groupSubjectIds = subjectGroupSubjectRepository.findBySubjectGroupId(group.getId()).stream().map(SubjectGroupSubject::getSubjectId).toList();
             if (new HashSet<>(groupSubjectIds).containsAll(subjectIds) && new HashSet<>(subjectIds).containsAll(groupSubjectIds)) {
-                List<SubjectResponseDTO> subjectDetails = subjectGroupSubjectRepository.findBySubjectGroupId(group.getId()).stream().map(sgs -> {
+                List<SubjectResponseDTO2> subjectDetails = subjectGroupSubjectRepository.findBySubjectGroupId(group.getId()).stream().map(sgs -> {
                     Subject subject = subjectRepository.findById(sgs.getSubjectId()).orElse(null);
                     if (subject != null) {
-                        return new SubjectResponseDTO(subject.getId(), subject.getName(), subject.getStatus().name());
+                        return modelMapper.map(subject, SubjectResponseDTO2.class);
                     } else {
                         return null;
                     }
                 }).filter(Objects::nonNull).collect(Collectors.toList());
-                // add to matching list
-                matchingSubjectGroups.add(new SubjectGroupResponseDTO(group.getId(), group.getName(), group.getStatus().name(), subjectDetails));
+                SubjectGroupResponseDTO responseDTO = modelMapper.map(group, SubjectGroupResponseDTO.class);
+                responseDTO.setSubjects(subjectDetails);
+                responseDTO.setCreateBy(getUserDetails(group.getCreateBy()));
+                matchingSubjectGroups.add(responseDTO);
             }
         }
-        // check if matching list not null then throw message and show the subject_group contain three subjects that has a subject_group before
         if (!matchingSubjectGroups.isEmpty()) {
             return new ResponseData<>(ResponseCode.C204.getCode(), "Đã tồn tại tổ hợp môn học với các môn học này !", matchingSubjectGroups);
         }
         try {
-            // Create principal
             Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
             Object principal = authentication.getPrincipal();
             log.debug("Principal type: {}", principal.getClass().getName());
@@ -99,18 +104,15 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
                 return new ResponseData<>(ResponseCode.C205.getCode(), "Người tham chiếu không hợp lệ !");
             }
             Integer staffId = staff.getId();
-            // create a null aray list to store the data processing before
             List<SubjectGroupSubject> subjectGroupSubjects = new ArrayList<>();
             List<CreateSubjectResponseDTO> subjectResponses = new ArrayList<>();
             for (Subject subject : subjects) {
-                subjectResponses.add(new CreateSubjectResponseDTO(subject.getId(), subject.getName(), subject.getCreateTime(), subject.getCreateBy(), subject.getUpdateBy(), subject.getStatus().name()));
-                // save to subject_group_subject
+                subjectResponses.add(modelMapper.map(subject, CreateSubjectResponseDTO.class));
                 SubjectGroupSubject subjectGroupSubject = new SubjectGroupSubject(subject.getId(), null);
                 subjectGroupSubject.setStatus(SubjectStatus.ACTIVE.name());
                 subjectGroupSubjects.add(subjectGroupSubject);
                 log.info("Subjects are valid and accepted {}", subject.getId());
             }
-            // create new object subject_group and save new subject_group
             SubjectGroup subjectGroup = new SubjectGroup();
             subjectGroup.setName(request.getName());
             subjectGroup.setCreateTime(new Date());
@@ -118,12 +120,10 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
             subjectGroup.setStatus(SubjectStatus.ACTIVE);
             subjectGroup = subjectGroupRepository.save(subjectGroup);
             log.info("New subject group created with ID {}", subjectGroup.getId());
-            // add to table subject_group_subject
             for (SubjectGroupSubject subjectGroupSubject : subjectGroupSubjects) {
                 subjectGroupSubject.setSubjectGroupId(subjectGroup.getId());
                 subjectGroupSubject.setCreateTime(new Date());
                 subjectGroupSubject.setCreateBy(staffId);
-                subjectGroupSubject.setStatus(SubjectStatus.ACTIVE.name());
                 subjectGroupSubjectRepository.save(subjectGroupSubject);
                 log.info("Saved mapping of subject {} with subject_group {} in subject_group_subject table", subjectGroupSubject.getSubjectId(), subjectGroup.getId());
             }
@@ -134,6 +134,7 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
             return new ResponseData<>(ResponseCode.C201.getCode(), ResponseCode.C201.getMessage());
         }
     }
+
 
     @Override
     public ResponseData<?> updateSubjectGroup(Integer id, UpdateSubjectGroupRequestDTO request) {
@@ -147,20 +148,12 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
             return new ResponseData<>(ResponseCode.C204.getCode(), "Tổ hợp môn học không tồn tại !");
         }
         try {
-            //check if update name
             log.info("Starting update process for Subject group with ID: {}", existSubjectGroup.getId());
             if (request.getName() != null && !request.getName().isEmpty()) {
                 existSubjectGroup.setName(request.getName());
                 log.info("Updated SubjectGroup name to {}", request.getName());
             }
-//            //check if update status
-//            if (request.getStatus() != null && !request.getStatus().isEmpty()) {
-//                existSubjectGroup.setStatus(request.getStatus());
-//                log.info("Updated SubjectGroup status to {}", request.getStatus());
-//            }
-            //save to database
             subjectGroupRepository.save(existSubjectGroup);
-            //when update with new subject, delete current relationship of that subject group id
             if (request.getSubjectIds() != null && !request.getSubjectIds().isEmpty()) {
                 List<SubjectGroupSubject> existingSubjects = subjectGroupSubjectRepository.findBySubjectGroupId(existSubjectGroup.getId());
                 for (SubjectGroupSubject existingSubject : existingSubjects) {
@@ -169,38 +162,33 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
                         log.info("Deleted relationship for subject ID {} from subject group ID {}", existingSubject.getSubjectId(), existSubjectGroup.getId());
                     }
                 }
-                //Check subject exist with typed subjectId
                 for (Integer subjectId : request.getSubjectIds()) {
-                    //check relationship between subject and subjectGroupId
                     boolean exists = subjectGroupSubjectRepository.existsBySubjectIdAndSubjectGroupId(subjectId, existSubjectGroup.getId());
                     if (!exists) {
-                        //if not exist, find the subject by id
                         Subject subject = subjectRepository.findById(subjectId).orElse(null);
                         if (subject != null) {
-                            //if subject is exist, add into subject_group_subject table
-                            subjectGroupSubjectRepository.save(new SubjectGroupSubject(subjectId, existSubjectGroup.getId()));
+                            SubjectGroupSubject sgs = new SubjectGroupSubject(subjectId, existSubjectGroup.getId());
+                            sgs.setStatus(SubjectStatus.ACTIVE.name());
+                            subjectGroupSubjectRepository.save(sgs);
                             log.info("Add new map list for subject ID {} to subject group ID {}", subjectId, existSubjectGroup.getId());
                         } else {
-                            //if not exist return message
                             log.warn("Subject with id: {} not found !", subjectId);
                             return new ResponseData<>(ResponseCode.C203.getCode(), ResponseCode.C203.getMessage());
                         }
                     }
                 }
             }
-            //map subject with subject group
             log.info("Subject Group update successfully with ID: {}", existSubjectGroup.getId());
-            List<SubjectResponseDTO> subjectResponse = subjectGroupSubjectRepository.findBySubjectGroupId(existSubjectGroup.getId()).stream().map(subjectGroupSubject -> {
-                Optional<Subject> subject = subjectRepository.findById(subjectGroupSubject.getSubjectId());
-                if (subject.isPresent()) {
-                    return new SubjectResponseDTO(subject.get().getId(), subject.get().getName(), subject.get().getStatus().name());
+            List<SubjectResponseDTO2> subjectResponse = subjectGroupSubjectRepository.findBySubjectGroupId(existSubjectGroup.getId()).stream().map(subjectGroupSubject -> {
+                Subject subject = subjectRepository.findById(subjectGroupSubject.getSubjectId()).orElse(null);
+                if (subject != null) {
+                    return modelMapper.map(subject, SubjectResponseDTO2.class);
                 }
                 return null;
-            }).toList();
-            //add subject group
+            }).filter(Objects::nonNull).collect(Collectors.toList());
             SubjectGroupResponseDTO result = modelMapper.map(existSubjectGroup, SubjectGroupResponseDTO.class);
-            //the subject_group will include subject in response
             result.setSubjects(subjectResponse);
+            result.setCreateBy(getUserDetails(existSubjectGroup.getCreateBy()));
             return new ResponseData<>(ResponseCode.C200.getCode(), "Cập nhật tổ hợp môn học thành công !", result);
         } catch (Exception e) {
             log.error("Error occurred while updating SubjectGroup: {}", e.getMessage());
@@ -208,27 +196,28 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
         }
     }
 
+
     @Override
     public ResponseData<?> getSubjectGroupById(Integer id) {
         Optional<SubjectGroup> subjectGroup = subjectGroupRepository.findById(id);
         if (subjectGroup.isEmpty()) {
             return new ResponseData<>(ResponseCode.C203.getCode(), "Nhóm môn học không được tìm thấy !");
         } else {
-            //set subject data to add in subject response
             SubjectGroup getSubjectGroup = subjectGroup.get();
-            List<SubjectResponseDTO> subjectResponse = subjectGroupSubjectRepository.findBySubjectGroupId(getSubjectGroup.getId()).stream().map(subjectGroupSubject -> {
+            List<SubjectResponseDTO2> subjectResponse = subjectGroupSubjectRepository.findBySubjectGroupId(getSubjectGroup.getId()).stream().map(subjectGroupSubject -> {
                 Subject subject = subjectRepository.findById(subjectGroupSubject.getSubjectId()).orElse(null);
                 if (subject != null) {
-                    return new SubjectResponseDTO(subject.getId(), subject.getName(), subject.getStatus().name());
+                    return modelMapper.map(subject, SubjectResponseDTO2.class);
                 }
                 return null;
-            }).toList();
+            }).filter(Objects::nonNull).collect(Collectors.toList());
             SubjectGroupResponseDTO result = modelMapper.map(getSubjectGroup, SubjectGroupResponseDTO.class);
-            //the update subject group response will include subject data
             result.setSubjects(subjectResponse);
+            result.setCreateBy(getUserDetails(getSubjectGroup.getCreateBy()));
             return new ResponseData<>(ResponseCode.C200.getCode(), ResponseCode.C200.getMessage(), result);
         }
     }
+
 
     @Override
     public ResponseData<Page<SubjectGroupResponseDTO>> findAll(String groupName, String subjectName, SubjectStatus status, Pageable pageable) {
@@ -237,22 +226,25 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
         Page<SubjectGroup> subjectGroupPage = subjectGroupRepository.findAll(groupName, subjectName, statusString, pageable);
 
         List<SubjectGroupResponseDTO> subjectGroupResponses = subjectGroupPage.getContent().stream().map(subjectGroup -> {
-            List<SubjectResponseDTO> subjectDetails = subjectGroupSubjectRepository.findBySubjectGroupId(subjectGroup.getId()).stream().map(sgs -> {
+            List<SubjectResponseDTO2> subjectDetails = subjectGroupSubjectRepository.findBySubjectGroupId(subjectGroup.getId()).stream().map(sgs -> {
                 Subject subject = subjectRepository.findById(sgs.getSubjectId()).orElse(null);
                 if (subject != null) {
-                    return new SubjectResponseDTO(subject.getId(), subject.getName(), subject.getStatus().name());
+                    return modelMapper.map(subject, SubjectResponseDTO2.class);
                 } else {
                     return null;
                 }
             }).filter(Objects::nonNull).collect(Collectors.toList());
-
-            return new SubjectGroupResponseDTO(subjectGroup.getId(), subjectGroup.getName(), subjectGroup.getStatus().name(), subjectDetails);
+            SubjectGroupResponseDTO responseDTO = modelMapper.map(subjectGroup, SubjectGroupResponseDTO.class);
+            responseDTO.setSubjects(subjectDetails);
+            responseDTO.setCreateBy(getUserDetails(subjectGroup.getCreateBy()));
+            return responseDTO;
         }).collect(Collectors.toList());
 
         Page<SubjectGroupResponseDTO> subjectGroupResponsePage = new PageImpl<>(subjectGroupResponses, pageable, subjectGroupPage.getTotalElements());
 
         return new ResponseData<>(ResponseCode.C200.getCode(), ResponseCode.C200.getMessage(), subjectGroupResponsePage);
     }
+
 
     @Override
     public ResponseData<?> deleteSubjectGroup(Integer id) {
@@ -305,5 +297,22 @@ public class SubjectGroupServiceImpl implements SubjectGroupService {
             //TODO: throw exception
         }
         return result;
+    }
+
+    private ActionerDTO getUserDetails(Integer userId) {
+        return userRepository.findById(userId)
+                .map(user -> {
+                    StaffInfo staffInfo = staffInfoRepository.findById(userId).orElse(null);
+                    String fullName;
+                    if (staffInfo != null) {
+                        fullName = NameUtils.getFullName(staffInfo.getFirstName(), staffInfo.getMiddleName(), staffInfo.getLastName());
+                    } else {
+                        fullName = "Nhân viên UAP";
+                    }
+                    ActionerDTO actionerDTO = new ActionerDTO(user.getId(), fullName, null, null);
+                    actionerDTO.setRole(modelMapper.map(user.getRole(), String.class));
+                    actionerDTO.setStatus(modelMapper.map(user.getStatus(), String.class));
+                    return actionerDTO;
+                }).orElse(null);
     }
 }
